html et css replacement + titre centré

--- a/index.html
+++ b/index.html
@@ -13,152 +13,204 @@
             <div class="header">
                 <div><img class="logo" src="images/foulard.png"></div>
             </div>
+
             <div class="header-bottom-text">
                 <p>Le 49e Groupe Scout!</p>
             </div>
 
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a class="choicenav" href="#" onclick="closeNav()">-Haut de page</a><br>
-                <a class="choicenav" href="#histoire" onclick="closeNav()">-Histoire du scoutisme</a><br>
-                <a class="choicenav" href="#49" onclick="closeNav()">-Le 49e groupe scout</a><br>
-                <a class="choicenav" href="#dates" onclick="closeNav()">-Dates importantes</a><br>
-                <a class="choicenav" href="#financement" onclick="closeNav()">-Moyens de financements</a><br>
-                <a class="choicenav" href="#photos" onclick="closeNav()">-Photos</a><br>
-                <a class="choicenav" href="#implication" onclick="closeNav()">-Comment s'impliquer?</a>
+                <a class="choicenav" href="#" onclick="closeNav()">- Haut de page</a><br>
+                <a class="choicenav" href="#histoire" onclick="closeNav()">- Histoire du scoutisme</a><br>
+                <a class="choicenav" href="#49" onclick="closeNav()">- Le 49e groupe scout</a><br>
+                <a class="choicenav" href="#dates" onclick="closeNav()">- Les dates importantes</a><br>
+                <a class="choicenav" href="#financement" onclick="closeNav()">- Moyens de financements</a><br>
+                <a class="choicenav" href="#implication" onclick="closeNav()">- Comment s'impliquer?</a><br>
+                <a class="choicenav" href="#photos" onclick="closeNav()">- Section photos</a><br>
                 <br><br><br>
             </div>
-              <div id="overlay" onclick="closeNav()"></div>
+
+            <div id="overlay" onclick="closeNav()"></div>
               
-              <div id="main">
-                <div><span id="navbutton" onclick="toggleNav()">&#9776; Navigation</span></div>
-              </div>
+            <div id="main">
+                <span id="navbutton" onclick="toggleNav()">&#9776; Navigation</span>
+            </div>
 
 
         <div class="content">
-            <br><br><br>
-            <h3 id="histoire" class ="title">Histoire du scoutisme</h3>
-            <br><br>
-            <div class ="text">
-                <h4>D'où ça vient</h4>
-                    <div class="text-histoire">
-                        <p class="media-change">
-                            <em>
-                                Le 1er août 1907, à huit heures du matin, le son d’une corne de koudou retentit dans le silence du matin sur l’île de Brownsea en Angleterre. 
-                                Lord Robert Stephenson Smyth Baden-Powell of Gilwell vient d’inaugurer le premier camp scout.
-                                <br><br>
-                                Aujourd’hui, il y a 40 millions de scouts à travers le monde. Comment tout cela a-t-il commencé?
-                                <br><br>
-                                En 1876, Baden-Powell décroche la seconde place à l’École militaire, ce qui l’amènera à se distinguer tout au long de sa carrière. 
-                                Différentes expériences, dont des missions d’espionnage et la tenue d’un siège à Mafeking durant la guerre des Boers amèneront B.-P. à 
-                                développer des méthodes basées sur le travail en petits groupes et la valorisation des meilleurs comportements. À son retour en Angleterre, 
-                                il adapte ses réflexions dans un ouvrage pour les jeunes garçons, «Scouting for Boys», qui donnera naissance au mouvement scout. Celui-ci devient 
-                                rapidement populaire, et le premier jamboree est tenu à Londre en 1920.
-                            </em>
-                                <br>(Source: Mon carnet d’aventure, Portfolio de scout Aventurier)
-                        </p>
-                        <p>
-                            <div class="container-image">
-                                <img src="images/baden-powell.png" alt="Baden-Powell" class="img">
-                                <div class="overlay-BP">Lord Robert Stephenson Smyth Baden-Powell of Gilwell</div>
+                <br><br><br>
+            <h2 id="histoire" class ="title">Histoire du scoutisme</h2>
+                <br><br>
+                    <div class ="text">
+                        <h4>Les origines</h4>
+                            <div class="text-origines">
+                                <p>
+                                    <em>
+                                        Le 1er août 1907, à huit heures du matin, le son d’une corne de koudou retentit dans le silence du matin sur l’île de Brownsea en Angleterre. 
+                                        Lord Robert Stephenson Smyth Baden-Powell of Gilwell vient d’inaugurer le premier camp scout.
+                                        <br><br>
+                                        Aujourd’hui, il y a 40 millions de scouts à travers le monde. Comment tout cela a-t-il commencé?
+                                        <br><br>
+                                        En 1876, Baden-Powell décroche la seconde place à l’École militaire, ce qui l’amènera à se distinguer tout au long de sa carrière. 
+                                        Différentes expériences, dont des missions d’espionnage et la tenue d’un siège à Mafeking durant la guerre des Boers amèneront B.-P. à 
+                                        développer des méthodes basées sur le travail en petits groupes et la valorisation des meilleurs comportements. À son retour en Angleterre, 
+                                        il adapte ses réflexions dans un ouvrage pour les jeunes garçons, «Scouting for Boys», qui donnera naissance au mouvement scout. Celui-ci devient 
+                                        rapidement populaire, et le premier jamboree est tenu à Londre en 1920.
+                                    </em>
+                                        <br>(Source: Mon carnet d’aventure, Portfolio de scout Aventurier)
+                                </p>
+                                <p>
+                                    <div class="container-image">
+                                        <img src="images/baden-powell.png" alt="Baden-Powell" class="img">
+                                        <div class="overlay-BP">Lord Robert Stephenson Smyth Baden-Powell of Gilwell</div>
+                                    </div>
+                                </p>
                             </div>
-                        </p>
-                    </div><br><br><br><br>
-                <h4>L'ASC</h4>
-                    <div class="text-and-picture-ASC">
-                        <p>
-                            <div class="container-image">
-                                <img src="images/logo-ASC.png" alt="logo-ASC" class="img">
-                                <div class="overlay-ASC">Logo de l'ASC</div>
+                            <br><br><br><br>
+                        <h4>L'ASC</h4>
+                            <div class="text-and-picture-ASC">
+                                <p>
+                                    <div class="container-image">
+                                        <img src="images/logo-ASC.png" alt="logo-ASC" class="img">
+                                        <div class="overlay-ASC">Logo de l'ASC</div>
+                                    </div>
+                                </p>
+                                <p class="text-ASC">
+                                    <em>
+                                        Au Canada, la première troupe canadienne-française fut créée en 1918 Ottawa, et de récentes découvertes nous permettent de croire que des 
+                                        éclaireurs francophones auraient pu accueillir Baden-Powell lors de son passage à Québec à l’été 1910. Il faudra toutefois attendre un peu avant 
+                                        que le scoutisme prenne réellement	son envol, puisque l’Église catholique, dont l’influence sur la société était à l’époque très marquée, hésita 
+                                        dans un premier temps à encourager le mouvement. En 1926, le scoutisme obtint toutefois l’appui de l’Église et entreprit une croissance fulgurante.
+                                        <br><br>
+                                        Jusque-là strictement masculin, le scoutisme canadien fusionna avec le guidisme en 1980, donnant un nouvel élan à l’organisation. 11 000 membres de 
+                                        plus se joindront à l’Association des scouts du Canada en 1994. Aujourd’hui, le scoutisme te permet de t’accomplir pleinement, en ciblant tes champs 
+                                        d’intérêts et en t’amenant à en développer de nouveaux. Tu développeras ainsi des outils te permettant d’atteindre ton plein potentiel comme individu, 
+                                        comme membre de ta communauté et comme citoyen y jouant un rôle actif.
+                                    </em>
+                                        <br>
+                                        (Source: Mon carnet d’aventure, Portfolio de scout Aventurier)
+                                </p>
                             </div>
-                        </p>
-                        <p class="text-ASC" class="media-change">
-                            <em>
-                                Au Canada, la première troupe canadienne-française fut créée en 1918 Ottawa, et de récentes découvertes nous permettent de croire que des 
-                                éclaireurs francophones auraient pu accueillir Baden-Powell lors de son passage à Québec à l’été 1910. Il faudra toutefois attendre un peu avant 
-                                que le scoutisme prenne réellement	son envol, puisque l’Église catholique, dont l’influence sur la société était à l’époque très marquée, hésita 
-                                dans un premier temps à encourager le mouvement. En 1926, le scoutisme obtint toutefois l’appui de l’Église et entreprit une croissance fulgurante.
-                                <br><br>
-                                Jusque-là strictement masculin, le scoutisme canadien fusionna avec le guidisme en 1980, donnant un nouvel élan à l’organisation. 11 000 membres de 
-                                plus se joindront à l’Association des scouts du Canada en 1994. Aujourd’hui, le scoutisme te permet de t’accomplir pleinement, en ciblant tes champs 
-                                d’intérêts et en t’amenant à en développer de nouveaux. Tu développeras ainsi des outils te permettant d’atteindre ton plein potentiel comme individu, 
-                                comme membre de ta communauté et comme citoyen y jouant un rôle actif.
-                            </em>
-                                <br>
-                                (Source: Mon carnet d’aventure, Portfolio de scout Aventurier)
+                    </div>
+                <br><br><br><br><br><br>
+            <h2 id="49" class ="title">Le 49e groupe scout</h2>
+                <br><br>
+                    <div class ="text">
+                        <h4>Petit historique</h4>
+                            <div class="text-historique">
+                                <p>
+
+                                </p>
+                            </div>
+                        <br><br><br><br>
+                        <h4>Dates de création</h4>
+                            <div class="text-dates">
+                                <p>
+
+                                </p>
+                            </div>
+                        <br><br><br><br>
+                        <h4>Les différents groupes d'âges</h4>
+                            <div class="text-âges">
+                                <p>
+
+                                </p>
+                            </div>
+                        <br><br><br><br>
+                        <h4>Terre des scouts</h4>
+                            <div class="text-terre">
+                                <p>
+
+                                </p>
+                            </div>
+                    </div>    
+                <br><br><br><br><br><br>
+            <h2 id="dates" class ="title">Les dates importantes</h2>
+                <br><br>
+                    <div class ="text">    
+                        <p>
+
                         </p>
                     </div>
-            </div>
+                <br><br><br><br><br><br>
+            <h2 id="financement" class ="title">Les moyens de financements</h2>
+                <br><br>
+                    <div class ="text">
+                        <h4>Calendrier</h4>
+                            <div class="text-calendrier">
+                                <p>
 
-          <h3 id="49" class ="title">Le 49e groupe scout</h3>
-            <ul class ="text">
-                <li>Les différents groupes d'âges</li>
-                    <p>
+                                </p>
+                            </div>
+                        <br><br><br><br>
+                        <h4>Chocolat</h4>
+                            <div class="text-chocolat">
+                                <p>
 
-                    </p>
-                <li>Dates de création</li>
-                    <p>
+                                </p>
+                            </div>
+                        <br><br><br><br>
+                        <h4>Lave-O-Thon</h4>
+                            <div class="text-lave">
+                                <p>
 
-                    </p>
-                <li>Petit historique</li>
-                    <p>
+                                </p>
+                            </div>
+                        <br><br><br><br>
+                        <h4>Canette</h4>
+                            <div class="text-canette">
+                                <p>
 
-                    </p>
-                <li>Terre des scouts</li>
-                    <p>
+                                </p>
+                            </div>
+                        <br><br><br><br>
+                        <h4>Linge</h4>
+                            <div class="text-linge">
+                                <p>
 
-                    </p>
-            </ul>    
+                                </p>
+                            </div>
+                        <br><br><br><br>
+                        <h4>Dons</h4>
+                            <div class="text-dons">
+                                <p>
 
-            <h3 id="dates" class ="title">Les dates importantes</h3>
-            <p class ="text"></p>
+                                </p>
+                            </div>
+                    </div>
+                <br><br><br><br><br><br>
+            <h2 id="implication" class ="title">Comment s'impliquer?</h2>
+                <br><br>
+                    <div class ="text">
+                        <h4>Animateur</h4>
+                            <div class ="text-animateur">
+                                <p>
 
-            <h3 id="financement" class ="title">Les moyens de financements</h3>
-            <ul class ="text">
-                <li>Calendrier</li>
-                    <p>
+                                </p>
+                            </div>
+                        <br><br><br><br>
+                        <h4>Membre du CA</h4>
+                            <div class ="text-CA">
+                                <p>
 
-                    </p>
-                <li>Chocolat</li>
-                    <p>
+                                </p>
+                            </div>
+                        <br><br><br><br>
+                        <h4>Aide de camps ou d'activités</h4>
+                            <div class ="text-aide">
+                                <p>
 
-                    </p>
-                <li>Lave-O-Thon</li>
-                    <p>
-
-                    </p>
-                <li>Canette</li>
-                    <p>
-
-                    </p>
-                <li>Linge</li>
-                    <p>
-
-                    </p>
-                <li>Dons</li>
-                    <p>
-
-                    </p>
-            </ul>
-
-            <h3 id="photos" class ="title">Section photos</h3>
-            <p class ="text"></p>
-
-            <h3 id="implication" class ="title">Comment s'impliquer?</h3>
-            <ul class ="text">
-                <li>Animateur</li>
-                    <p>
-
-                    </p>
-                <li>Membre du CA</li>
-                    <p>
-
-                    </p>
-                <li>Aide de camps ou d'activités</li>
-                    <p>
-
-                    </p>
-            </ul>
+                                </p>
+                            </div>
+                    </div>
+                <br><br><br><br><br><br>
+            <h2 id="photos" class ="title">Section photos</h2>
+                <br><br>
+                    <div class ="text">
+                        <p>
+                            
+                        </p>
+                    </div>      
         </div>
     </body>
 </html>
