shit load of things

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <h2 id="histoire" class ="title">Histoire du scoutisme</h2>
                 <br><br>
                     <div class ="text">
-                        <h4>Les origines</h4>
-                            <div class="text-origines">
+                        <h3>Les origines</h3>
+                            <div id="text-origines" class="text-and-picture">
                                 <p>
                                     <em>
                                         Le 1er août 1907, à huit heures du matin, le son d’une corne de koudou retentit dans le silence du matin sur l’île de Brownsea en Angleterre. 
@@ -60,17 +60,17 @@
                                 </p>
                                 <p>
                                     <div class="container-image">
-                                        <img src="images/baden-powell.png" alt="Baden-Powell" class="img">
+                                        <img src="images/baden-powell.png" alt="Baden-Powell" class="picture">
                                         <div class="overlay-BP">Lord Robert Stephenson Smyth Baden-Powell of Gilwell</div>
                                     </div>
                                 </p>
                             </div>
                             <br><br><br><br>
-                        <h4>L'ASC</h4>
-                            <div class="text-and-picture-ASC">
+                        <h3>L'ASC</h3>
+                            <div id="tap-ASC"  class="text-and-picture">
                                 <p>
                                     <div class="container-image">
-                                        <img src="images/logo-ASC.png" alt="logo-ASC" class="img">
+                                        <img src="images/logo-ASC.png" alt="logo-ASC" class="picture">
                                         <div class="overlay-ASC">Logo de l'ASC</div>
                                     </div>
                                 </p>
@@ -95,94 +95,136 @@
             <h2 id="49" class ="title">Le 49e groupe scout</h2>
                 <br><br>
                     <div class ="text">
-                        <h4>Petit historique</h4>
-                            <div class="text-historique">
-                                <p>
-                                    
+                        <h3>Petit historique</h3>
+                            <div id="tap-historique" class="text-and-picture">
+                                <p class="text-historique">
+                                    En 1954, le Club Richelieu de Saint-Georges a eu l’initiative de créer un mouvement scout dans la région. Leur souhait s’est concrétisé en 1955, marquant la naissance du scoutisme à Saint-Georges.
+                                    <br><br>
+                                    L’église de l’Assomption a généreusement offert le tout premier local au groupe scout. C’est d’ailleurs dans cette église que s’est tenue la toute première promesse, en mai 1955. À cette époque, les premiers chefs de patrouille étaient MM. Claude Roberge et Jules Couture, tandis que le tout premier chef de groupe était nul autre que l’abbé Benoît Poulin.
+                                    <br><br>
+                                    Le 5 juin 1978, le groupe scout s’est officiellement incorporé sous le nom <b>Groupe scout et guide de Saint-Georges de Beauce inc.</b> 
+                                    <br><br>
+                                    L’année suivante, en 1979, la Ville de Saint-Georges a construit le <b>Pavillon Comrie</b>, grâce à un héritage laissé par <b>M. Thomas Comrie</b>, ingénieur d’origine écossaise et fondateur du plus ancien tournoi de hockey organisé en Amérique du Nord, le réputé Tournoi Comrie. Ce bâtiment est devenu le nouveau point d’ancrage oƯiciel du groupe scout, qui y est basé depuis. Afin d’assurer l’autofinancement du local, les scouts ont versé un loyer jusqu’en 2004. Depuis cette date, bien que le loyer ait été aboli, le groupe assume les coûts liés à l’électricité et à l’entretien.
+                                    <br><br>
+                                    Le <b>49e groupe scout de Saint-Georges</b> fait partie de la grande famille de l’<b>Association des Scouts du Canada (ASC)</b> et est membre du District de l’Est du Québec.
                                 </p>
+                                <p>
+                                    <div class="container-image">
+                                        <img src="images/archive_cropped.png" alt="Photo d'une archive" class="picture">
+                                        <div class="overlay-archive">Ancienne photo du journal l'éclaireur</div>
+                                    </div>
+                                </p>  
                             </div>
                         <br><br><br><br>
                         <h4>Les différents groupes d'âges</h4>
-                            <div class="text-âges">
+                            <div id="tap-âges"  class="text-and-picture">
                                 <p>
+                                    <div class="container-image">
+                                        <img src="images/banière_groupe.png" alt="Banière différents groupe" class="picture">
+                                        <div class="overlay-groupe">Voici la liste des différent groupe en plus concis</div>
+                                    </div>
+                                </p>
+                                <p class="text-âges">
+                                    <b>Castors (7 à 8 ans)</b><br>
+                                    Les plus jeunes découvrent le scoutisme par le jeu et l'exploration de la nature. Ils évoluent dans une <b>colonie</b>, divisée en petites équipes appelées <b>huttes</b>, où ils développent leur autonomie dans un cadre sécurisant et amusant. 
+                                    <br><br>
+                                    <b>Louveteaux (9 à 11 ans)</b><br>
+                                    Les Louveteaux grandissent dans une <b>tanière</b> inspirée de l’univers du Livre de la jungle. Ils apprennent le travail d’équipe, s’impliquent dans leur communauté et découvrent les joies du plein air.
+                                    <br><br>
+                                    <b>Aventuriers (12 à 17 ans)</b><br>
+                                    Les Aventuriers vivent pleinement l’expérience du plein air, développent leur leadership et s’engagent à incarner les <b>valeurs scoutes</b>. Ils agissent comme mentors auprès des plus jeunes et participent activement à la vie du groupe. Toujours prêts, leur sac n’est jamais bien loin !
+                                    <br><br>
+                                    <b>Routiers (18 à 25 ans)</b><br>
+                                    Les Routiers sont les piliers du service <b>communautaire</b>. Leaders au sein du groupe, du district ou de l’ASC, ils mènent leurs propres projets, participent à des rassemblements et s’impliquent ici comme à l’international. Leur mission : construire un monde plus juste et respectueux de la vie autour d’eux. 
 
                                 </p>
                             </div>
                         <br><br><br><br>
                         <h4>Terre des scouts</h4>
-                            <div class="text-terre">
+                            <div id="tap-terre"  class="text-and-picture">
+                                <p class="text-terre">
+                                    En 1989, dans le but d’offrir un contact direct avec la nature et d’inculquer aux jeunes les
+                                    valeurs de conservation, de respect et de connaissance du milieu naturel, le groupe a
+                                    entrepris des démarches pour acquérir un terrain. Après plus de trois ans de
+                                    correspondance avec le ministère de l’Énergie et des Ressources, une <b>terre de la
+                                    Couronne située à Cumberland</b> a pu être louée en mai 1992. Ce site, à seulement 15
+                                    minutes du local scout, permet l’organisation de camps d’été et d’hiver et constitue un lieu
+                                    privilégié pour vivre le scoutisme en nature.
+                                </p>
                                 <p>
-
+                                    <div class="container-image">
+                                        <img src="" alt="" class="picture">
+                                        <div class="overlay-terre"></div>
+                                    </div>
                                 </p>
                             </div>
                     </div>
                 <br><br><br><br><br><br>
-            <h2 id="financement" class ="title">Les moyens de financements</h2>
-                <br><br>
-                    <div class ="text">
+            <div id="financement-section" class="financement">
+                <h2 id="financement" class="title">Les moyens de financements</h2>
+                    <p>
+                    Que se soit pour des camps ou des activités tout au long de l’année, le groupe a besoin d’un peu d’argent. C’est pourquoi nous devons effectuer quelques campagnes de financements obligatoires! Les voici:
+                    </p>
+                <div class="financement-grid">
+                    <!-- Première ligne -->
+                    <div class="financement-item" onclick="showDetails('calendrier')">
                         <h4>Calendrier</h4>
-                            <div class="text-calendrier">
-                                <p>
-
-                                </p>
-                            </div>
-                        <br><br><br><br>
-                        <h4>Chocolat</h4>
-                            <div class="text-chocolat">
-                                <p>
-
-                                </p>
-                            </div>
-                        <br><br><br><br>
-                        <h4>Lave-O-Thon</h4>
-                            <div class="text-lave">
-                                <p>
-
-                                </p>
-                            </div>
-                        <br><br><br><br>
-                        <h4>Canette</h4>
-                            <div class="text-canette">
-                                <p>
-
-                                </p>
-                            </div>
-                        <br><br><br><br>
-                        <h4>Linge</h4>
-                            <div class="text-linge">
-                                <p>
-
-                                </p>
-                            </div>
-                        <br><br><br><br>
-                        <h4>Dons</h4>
-                            <div class="text-dons">
-                                <p>
-
-                                </p>
-                            </div>
                     </div>
+                    <div class="financement-item" onclick="showDetails('chocolat')">
+                        <h4>Chocolat</h4>
+                    </div>
+                    <div class="financement-item" onclick="showDetails('lave')">
+                        <h4>Lave-O-Thon</h4>
+                    </div>
+
+                    <!-- Texte entre les deux séries -->
+                    <div class="financement-separator">
+                        Voici d'autres campagnes de financement importantes pour soutenir nos activités :
+                    </div>
+
+                    <!-- Deuxième ligne -->
+                    <div class="financement-item" onclick="showDetails('canette')">
+                        <h4>Canette</h4>
+                    </div>
+                    <div class="financement-item" onclick="showDetails('linge')">
+                        <h4>Linge</h4>
+                    </div>
+                    <div class="financement-item" onclick="showDetails('dons')">
+                        <h4>Dons</h4>
+                    </div>
+                </div>
+
+                <!-- Détails des campagnes -->
+                <div id="details-container" class="details-container">
+                    <div id="details-content" class="details-content">
+                        <span class="close-details" onclick="hideDetails()">&times;</span>
+                        <h3 id="details-title"></h3>
+                        <p id="details-text"></p>
+                        <img id="details-image" src="" alt="Image de la campagne">
+                    </div>
+                </div>
+            </div>
                 <br><br><br><br><br><br>
             <h2 id="implication" class ="title">Comment s'impliquer?</h2>
                 <br><br>
                     <div class ="text">
                         <h4>Animateur</h4>
-                            <div class ="text-animateur">
-                                <p>
+                            <div id="tap-animateur"  class="text-and-picture">
+                                <p class="text-animateur">
 
                                 </p>
                             </div>
                         <br><br><br><br>
                         <h4>Membre du CA</h4>
-                            <div class ="text-CA">
-                                <p>
+                            <div id="tap-CA"  class="text-and-picture">
+                                <p class="text-CA">
 
                                 </p>
                             </div>
                         <br><br><br><br>
                         <h4>Aide de camps ou d'activités</h4>
-                            <div class ="text-aide">
-                                <p>
+                            <div id="tap-aide"  class="text-and-picture">
+                                <p class="text-aide">
 
                                 </p>
                             </div>
@@ -190,7 +232,7 @@
                 <br><br><br><br><br><br>
             <h2 id="photos" class ="title">Section photos</h2>
                 <br><br>
-                    <div class ="text">
+                    <div class="text">
                         <p>
                             
                         </p>
